# CSV-to-QR-Code

./: QR-Test.csv  README.md  gui.py  main.py  pyproject.toml  test.csv
