[tool.poetry]
name = "lul"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
qrcode = "^6.1"
pandas = "^1.2.1"
dearpygui = "^0.6.183"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
